continue to fix design

--- a/Jefferson-3258-Midterm/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+++ b/Jefferson-3258-Midterm/ProjectSettings/Packages/com.unity.probuilder/Settings.json
@@ -124,7 +124,7 @@
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastSize",
-                "value": "{\"m_Value\":{\"x\":1.5573391914367676,\"y\":1.8013767004013062,\"z\":-0.2814750671386719}}"
+                "value": "{\"m_Value\":{\"x\":3.6061863899230959,\"y\":4.974105358123779,\"z\":15.98626708984375}}"
             },
             {
                 "type": "UnityEngine.Quaternion, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
@@ -164,6 +164,11 @@
             {
                 "type": "UnityEngine.ProBuilder.Shapes.Shape, Unity.ProBuilder, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.Arch",
+                "value": "{}"
+            },
+            {
+                "type": "UnityEngine.ProBuilder.Shapes.Shape, Unity.ProBuilder, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
+                "key": "ShapeBuilder.Door",
                 "value": "{}"
             }
         ]
